...
        android:id="@+id/menuLogout"
        android:title="Logout"
        />

    <item
        android:id="@+id/menuProfile"
        android:title="Profile"
        />

    <item
        android:id="@+id/menuSettings"
        android:title="Settings"
        />
...
